<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game" >

    <View
        android:id="@+id/backgroundTouchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.limelight.ui.StreamView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:defaultFocusHighlightEnabled="false">
        <requestFocus />
    </com.limelight.ui.StreamView>

    <TextView
        android:id="@+id/performanceOverlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="left"
        android:background="#80000000"
        android:preferKeepClear="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/notificationOverlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="right"
        android:background="#80000000"
        android:preferKeepClear="true"
        android:visibility="gone" />

    <!-- Special keys bar (shown with 3-finger tap above soft keyboard) -->
    <LinearLayout
        android:id="@+id/specialKeysBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="#E0303030"
        android:visibility="gone"
        android:elevation="8dp">

        <!-- All keys in single scrollable row -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- Modifier mode toggle (sticky/tap) -->
                <ToggleButton
                    android:id="@+id/modifierModeToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:textOn="@string/key_mode_sticky"
                    android:textOff="@string/key_mode_tap"
                    android:textSize="10sp"
                    android:checked="true" />

                <!-- Separator -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:background="#60FFFFFF" />

                <!-- Modifier buttons -->
                <Button
                    android:id="@+id/keyboardBtnCtrl"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="48dp"
                    android:text="@string/key_ctrl"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnAlt"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="48dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/key_alt"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnShift"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="48dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/key_shift"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnWin"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="48dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/key_win"
                    android:textSize="11sp" />

                <!-- Separator -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:background="#60FFFFFF" />

                <!-- Common keys -->
                <Button
                    android:id="@+id/keyboardBtnEsc"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="44dp"
                    android:text="@string/key_esc"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnTab"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="44dp"
                    android:text="@string/key_tab"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnDelete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="44dp"
                    android:text="@string/key_delete"
                    android:textSize="11sp" />

                <!-- Separator -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:background="#60FFFFFF" />

                <!-- Function keys -->
                <Button
                    android:id="@+id/keyboardBtnF1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f1"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f2"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f3"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f4"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f5"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f6"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f7"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f8"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f9"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF10"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f10"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF11"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f11"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/keyboardBtnF12"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="40dp"
                    android:text="@string/key_f12"
                    android:textSize="11sp" />

                <!-- Separator -->
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:background="#60FFFFFF" />

                <!-- Hide button -->
                <Button
                    android:id="@+id/specialKeysHide"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:minWidth="48dp"
                    android:text="@string/key_hide"
                    android:textSize="11sp" />

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <!-- Bottom keyboard input bar (shown with 4-finger tap) -->
    <LinearLayout
        android:id="@+id/keyboardInputBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#E0303030"
        android:visibility="gone"
        android:elevation="8dp">

        <EditText
            android:id="@+id/keyboardInputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/keyboard_input_hint"
            android:inputType="text|textNoSuggestions"
            android:imeOptions="flagNoFullscreen|flagNoExtractUi"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="#80000000"
            android:background="@android:drawable/editbox_background"
            android:padding="12dp" />

        <Button
            android:id="@+id/keyboardInputSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/keyboard_input_send"
            android:minWidth="80dp" />

        <Button
            android:id="@+id/keyboardInputSendEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/keyboard_input_send_enter"
            android:minWidth="80dp" />

        <Button
            android:id="@+id/keyboardInputCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@android:string/cancel"
            android:minWidth="80dp" />


    </LinearLayout>

</merge>
